kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pmml-ui-deployment
  labels:
    app: pmml-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pmml-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pmml-ui
    spec:
      serviceAccountName: pmml-ui-serviceaccount
      containers:
      - name: pmml-ui
        image: torarg/pmml-ui:0.1.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - mountPath: "/home/app/users.json"
          subPath: "users.json"
          name: "pmml-ui-users"
          readOnly: true
      volumes:
      - name: pmml-ui-users
        secret:
          secretName: pmml-ui-users
