kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pmml-ui-http
spec:
  selector:
    app.kubernetes.io/name: pmml-ui
  ports:
    - protocol: TCP
      port: 8080
