kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pmml-ui-tls-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: my.fqdn.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pmml-ui-http
                port:
                  number: 8080
  tls:
    - secretName: pmml-ui-tls
      hosts:
        - my.fqdn.org
